# technical-docs

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml  ci.yml  lint.yml  prettier-markdown-check.yml  publish-documentation.yml  publish.yml  run-checks.yml
blog/: index.html
blog/2024/06/10/sentence-transformers-for-sentence-similarity/: index.html
blog/archive/2024/: index.html
blog/category/engineering/: index.html
blog/category/guides/: index.html
docs/: index.md
docs/backend/: ideology.md  index.md  system_architecture.md
docs/backend/api/: endpoints.md  endpoints.yaml
docs/blog/: .authors.yml
docs/blog/posts/: 7-git-tips-to-overcome-your-fear-of-version-control.md  sentence-transformers-for-sentence-similarity.md
docs/home/contribution_guides/: classes_types_and_all.md  endpoints.md  formatting.md  introduction.md
docs/js/: doculabels.js
docs/styles/: author.css
guides/: README.md
home/contribution_guides/classes_types_and_all/: index.html
home/contribution_guides/endpoints/: index.html
home/contribution_guides/formatting/: index.html
home/contribution_guides/introduction/: index.html
home/hooks/authors/: index.html
home/hooks/doculabels/: index.html
projects/: index.html
projects/genai/example-project/section-one/: index.html
projects/genai/example-project/section-two/: index.html
projects/genai/health-hub/data-pipeline/: index.html
search/: search_index.json
(+100 files in other folders)
