[tool.poetry]
name = "technical-docs"
version = "0.1.0"
description = ""
authors = ["Wilsven Leong <wilsven_leong96@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.29"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
